@@ -5,7 +5,7 @@
 export DH_COMPAT=2
 
 pwd:=$(shell pwd)
-cfg:=--prefix=/usr --sysconfdir=/etc --with-group=nogroup --mandir=/usr/share/man --with-ldap-schema-directory=/etc/ldap/schema
+cfg:=--prefix=/usr --sysconfdir=/etc --with-group=nogroup --mandir=/usr/share/man --with-ldap-schema-directory=/etc/ldap/schema --enable-shared
 
 build: checkbuild build-stamp
 build-stamp:
