@@ -23,7 +23,7 @@
 #
 ######################################################################
 
-SUBDIRS = redhat lsb
+SUBDIRS = lsb
 
 EXTRA_DIST = 
 
