@@ -156,7 +156,8 @@ fi
        --sharedstatedir=%{_sharedstatedir} \
        --mandir=%{_mandir} \
        --infodir=%{_infodir} \
-       --with-ldap-schema-directory=/etc/openldap/schema
+       --with-ldap-schema-directory=/etc/openldap/schema \
+       --enable-shared
 
 make
 
