@@ -1,3 +1,0 @@
-Makefile
-Makefile.in
-perdition.spec
