@@ -579,7 +579,7 @@ by logging having logging the following messages:
 .P
 When a user connects:
 .P
-Connect: <source_ip_address>[inetd_pid_<pid>]
+Connect: <source_ip_address>[inetd_pid=<pid>]
 .P
 When a user is authenticted
 .P
